# fin_emnlp

./: .gitignore  CLAUDE.md  FIN_구조.md  FaVOR_Author_Responses.md  FaVOR_Reviews_Summary.md  README.md  implementation_settings.md
baselines/alphaagent/: example.json  example_ours.json  export.py  formula_packager.py  judge_process_pair.py  make_fig5_all_stats_2x2.py  make_figure5_validation.py  pyproject.toml  stage2.py  stage2_compare_plot.py  stage2_index_summary.py  validation_dataclasses.py
baselines/alphaagent/.github/workflows/: pr.yml
baselines/alphaagent/alphaagent/core/: conf.py  evaluation.py  evolving_agent.py  experiment.py  knowledge_base.py  prompts.py  proposal.py  scenario.py  utils.py
baselines/alphaagent/alphaagent/utils/: workflow.py
baselines/alphaagent/examples_ous_bundle/: react_validation_agent_233236_998002_formula011.json  react_validation_agent_from_summary_outer_iter_1_formula004_v2.json  react_validation_agent_from_summary_outer_iter_1_formula006_v1.json  react_validation_agent_from_summary_outer_iter_1_formula007.json  react_validation_agent_from_summary_outer_iter_1_formula008.json  react_validation_agent_from_summary_outer_iter_1_formula009.json  react_validation_agent_from_summary_outer_iter_3_formula007.json  react_validation_agent_from_summary_outer_iter_3_formula008.json
baselines/alphaagent/mk_images/: validation_stage_analysis.json  validation_stage_analysis.md
baselines/alphaagent/qlib/: README.md
baselines/alphaagent/qlib/qlib/: __init__.py
baselines/alphaagent/summary/: ours_stage2_summary.json
favor/: .env.example  (+7 more)
(+642 files in other folders)
